--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,7 +201,7 @@ body {
   fill: var(--accent-color);
 }
 
-  .link.current {
+.link.current {
   color: var(--accent-color);
 }
 
@@ -210,12 +210,11 @@ body {
   display: flex;
   width: 100%;
   height: 4px;
-  border-radius: 2px; 
+  border-radius: 2px;
   background-color: var(--accent-color);
 
   position: absolute;
   bottom: 0;
-
 }
 
 /* hero */
@@ -275,7 +274,7 @@ body {
   top: 0;
   left: 0;
   z-index: 5;
- 
+
   width: 100%;
   height: 100%;
 
@@ -290,14 +289,14 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 
-
   width: 528px;
   height: 581px;
 
   padding: 40px;
 
-  background-color: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 
@@ -321,7 +320,7 @@ body {
   position: absolute;
   top: 8px;
   right: 8px;
-  display: flex;  
+  display: flex;
   justify-content: center;
   align-items: center;
 
@@ -329,10 +328,9 @@ body {
   height: 30px;
   padding: 0;
 
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  
 }
 
 .modal-icon {
@@ -344,11 +342,9 @@ body {
   fill: var(--accent-color);
 }
 
-.form-modal { 
-  
-  width: 448px; 
-  margin-bottom: 30px;  
-
+.form-modal {
+  width: 448px;
+  margin-bottom: 30px;
 }
 
 .form-field {
@@ -417,7 +413,6 @@ body {
   margin-bottom: 30px;
   padding-right: 11px;
   padding-left: 36px;
-
 }
 
 .license-checkbox {
@@ -528,13 +523,13 @@ body {
 
   display: flex;
   justify-content: center;
-  align-items: center;    
+  align-items: center;
   height: 70px;
   width: 100%;
-  
+
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;  
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
@@ -581,7 +576,7 @@ body {
   margin-bottom: 16px;
 
   font-size: 16px;
-  line-height: 1.17;  
+  line-height: 1.17;
 }
 
 .social-list {
@@ -596,13 +591,13 @@ body {
   border-radius: 50%;
 
   justify-content: center;
-  align-items: center;  
-
+  align-items: center;
 }
 
 .social-link,
 .social-link .icon {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list .item + .item {
@@ -627,12 +622,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .clients-link .icon,
 .clients-link {
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list > .item + .item {
@@ -659,8 +654,6 @@ body {
   display: flex;
   align-items: baseline;
 }
-
-
 
 .footer .logo {
   display: block;
@@ -738,13 +731,11 @@ body {
 
 .social-link:hover .icon,
 .social-link:focus .icon {
- 
   fill: var(--white-color);
 }
 
 .subscribe-label {
   display: block;
-
 }
 
 .subscribe-container {
@@ -806,16 +797,18 @@ body {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-  text-decoration: none; 
+  text-decoration: none;
   border: none;
-  border-radius: 4px; 
+  border-radius: 4px;
 
   padding: 6px 22px;
 
   color: var(--title-color);
   background-color: var(--background-filter-buttons);
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .services:hover,
@@ -823,7 +816,8 @@ body {
   color: var(--white-color);
   background-color: var(--accent-color);
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-button {
@@ -848,7 +842,7 @@ body {
 .element-filter .item {
   width: calc(100% / 3 - var(--portfolio-grid-gap));
   margin-left: var(--portfolio-grid-gap);
-  margin-top: var(--portfolio-grid-gap);  
+  margin-top: var(--portfolio-grid-gap);
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -859,9 +853,9 @@ body {
 
 .element-filter .filter-link:hover,
 .element-filter .filter-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 
 .element-filter a {
   text-decoration: none;
@@ -901,7 +895,7 @@ body {
   font-size: 18px;
   line-height: 1.55;
 
-  padding: 63px 24px ;
+  padding: 63px 24px;
 
   letter-spacing: 0.03em;
 
